; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_stream.c_process_config_packet.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_stream.c_process_config_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stream = type { i64 }

@.str = private unnamed_addr constant [41 x i8] c"Could not send config packet to recorder\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stream*, i32*)* @process_config_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @process_config_packet(%struct.stream* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.stream*, align 8
  %5 = alloca i32*, align 8
  store %struct.stream* %0, %struct.stream** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load %struct.stream*, %struct.stream** %4, align 8
  %7 = getelementptr inbounds %struct.stream, %struct.stream* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %2
  %11 = load %struct.stream*, %struct.stream** %4, align 8
  %12 = getelementptr inbounds %struct.stream, %struct.stream* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @recorder_push(i64 %13, i32* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %10
  %18 = call i32 @LOGE(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %20

19:                                               ; preds = %10, %2
  store i32 1, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %17
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @recorder_push(i64, i32*) #1

declare dso_local i32 @LOGE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
